# fast-api

./: .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py  config.py
app/auth/: __init__.py  passOps.py  tokenOps.py
app/models/: __init__.py  password.py  user.py
app/resource/: __init__.py  createUser.py  login.py  refreshToken.py  resetPass.py  root.py
app/schemas/: __init__.py
app/tasks/: __init__.py  email.py
