[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Tarang Ambaliya <taranga@webelight.co.in>"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
